// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonSecondary> global render should render 1`] = `
.c0 {
  color: #0E353D;
  font-size: 16px;
  line-height: 20px;
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #D9DFE0;
  border-radius: 4px;
  min-width: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  padding: 10px 16px;
  height: 40px;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  border: 1px solid #D9DFE0;
  background-color: #D9DFE0;
}

.c0:active:not(:disabled) {
  border: 1px solid #9FAEB1;
  background-color: #9FAEB1;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:disabled span {
  pointer-events: none;
}

.c1 {
  font-family: 'Public Sans','Helvetica Neue',Helvetica,Arial, 'Lucida Grande',sans-serif;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<ButtonSecondary>
  <Component
    colors={
      Object {
        "dark": Object {
          "backgroundColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "#3E5D64",
          },
        },
        "default": Object {
          "backgroundColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "#D9DFE0",
          },
          "textColor": "#0E353D",
        },
      }
    }
  >
    <BaseButton
      theme={
        Object {
          "backgroundColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "#D9DFE0",
          },
          "textColor": "#0E353D",
        }
      }
    >
      <styled.button
        theme={
          Object {
            "backgroundColor": Object {
              "active": "#9FAEB1",
              "hover": "#D9DFE0",
              "idle": "transparent",
            },
            "borderColor": Object {
              "active": "#9FAEB1",
              "hover": "#D9DFE0",
              "idle": "#D9DFE0",
            },
            "textColor": "#0E353D",
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bxivhb",
                "isStatic": false,
                "lastClassName": "iwLVoy",
                "rules": Array [
                  "
  ",
                  "
  color: ",
                  [Function],
                  ";
  font-size: 16px;
  line-height: 20px;
  background-color: ",
                  [Function],
                  ";
  cursor: pointer;
  border: ",
                  [Function],
                  ";
  border-radius: 4px;
  min-width: 60px;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: none;
  transition: all 0.1s;
  ",
                  [Function],
                  ";

  &:hover:not(:disabled),
  &:focus:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:active:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:disabled {
    opacity: 0.6;
    cursor: not-allowed;
    span {
      pointer-events: none;
    }
  }
",
                  "
  padding: 10px 16px;
  height: 40px;
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bxivhb",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "backgroundColor": Object {
                "active": "#9FAEB1",
                "hover": "#D9DFE0",
                "idle": "transparent",
              },
              "borderColor": Object {
                "active": "#9FAEB1",
                "hover": "#D9DFE0",
                "idle": "#D9DFE0",
              },
              "textColor": "#0E353D",
            }
          }
        >
          <button
            className="c0"
          >
            <Styled(styled.span)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-EHOje",
                      "isStatic": true,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  @import url('https://fonts.googleapis.com/css?family=Public+Sans:400,500,600&display=swap');
  font-family: 'Public Sans', 'Helvetica Neue', Helvetica, Arial,
    'Lucida Grande', sans-serif;
",
                        "
  font-weight: 600;
",
                        "
  display: flex;
  justify-content: center;
  align-items: center;
",
                      ],
                    },
                    "displayName": "Styled(styled.span)",
                    "foldedComponentIds": Array [
                      "sc-bwzfXH",
                    ],
                    "render": [Function],
                    "styledComponentId": "sc-EHOje",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </Styled(styled.span)>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonSecondary>
`;

exports[`<ButtonSecondary> global render should render 2`] = `
.c0 {
  color: #FFFFFF;
  font-size: 16px;
  line-height: 20px;
  background-color: transparent;
  cursor: pointer;
  border: 1px solid #3E5D64;
  border-radius: 4px;
  min-width: 60px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  -webkit-transition: all 0.1s;
  transition: all 0.1s;
  padding: 10px 16px;
  height: 40px;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  border: 1px solid #3E5D64;
  background-color: #3E5D64;
}

.c0:active:not(:disabled) {
  border: 1px solid #6E868B;
  background-color: #6E868B;
}

.c0:disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.c0:disabled span {
  pointer-events: none;
}

.c1 {
  font-family: 'Public Sans','Helvetica Neue',Helvetica,Arial, 'Lucida Grande',sans-serif;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<ButtonSecondary
  theme="dark"
>
  <Component
    colors={
      Object {
        "dark": Object {
          "backgroundColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "#3E5D64",
          },
        },
        "default": Object {
          "backgroundColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#9FAEB1",
            "hover": "#D9DFE0",
            "idle": "#D9DFE0",
          },
          "textColor": "#0E353D",
        },
      }
    }
    theme="dark"
  >
    <BaseButton
      theme={
        Object {
          "backgroundColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "transparent",
          },
          "borderColor": Object {
            "active": "#6E868B",
            "hover": "#3E5D64",
            "idle": "#3E5D64",
          },
        }
      }
    >
      <styled.button
        theme={
          Object {
            "backgroundColor": Object {
              "active": "#6E868B",
              "hover": "#3E5D64",
              "idle": "transparent",
            },
            "borderColor": Object {
              "active": "#6E868B",
              "hover": "#3E5D64",
              "idle": "#3E5D64",
            },
          }
        }
      >
        <StyledComponent
          forwardedComponent={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "attrs": Array [],
              "componentStyle": ComponentStyle {
                "componentId": "sc-bxivhb",
                "isStatic": false,
                "lastClassName": "c0",
                "rules": Array [
                  "
  ",
                  "
  color: ",
                  [Function],
                  ";
  font-size: 16px;
  line-height: 20px;
  background-color: ",
                  [Function],
                  ";
  cursor: pointer;
  border: ",
                  [Function],
                  ";
  border-radius: 4px;
  min-width: 60px;
  display: flex;
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: center;
  outline: none;
  transition: all 0.1s;
  ",
                  [Function],
                  ";

  &:hover:not(:disabled),
  &:focus:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:active:not(:disabled) {
    border: ",
                  [Function],
                  ";
    background-color: ",
                  [Function],
                  ";
  }
  &:disabled {
    opacity: 0.6;
    cursor: not-allowed;
    span {
      pointer-events: none;
    }
  }
",
                  "
  padding: 10px 16px;
  height: 40px;
",
                ],
              },
              "displayName": "styled.button",
              "foldedComponentIds": Array [],
              "render": [Function],
              "styledComponentId": "sc-bxivhb",
              "target": "button",
              "toString": [Function],
              "warnTooManyClasses": [Function],
              "withComponent": [Function],
            }
          }
          forwardedRef={null}
          theme={
            Object {
              "backgroundColor": Object {
                "active": "#6E868B",
                "hover": "#3E5D64",
                "idle": "transparent",
              },
              "borderColor": Object {
                "active": "#6E868B",
                "hover": "#3E5D64",
                "idle": "#3E5D64",
              },
            }
          }
        >
          <button
            className="c0"
          >
            <Styled(styled.span)>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-EHOje",
                      "isStatic": true,
                      "lastClassName": "c1",
                      "rules": Array [
                        "
  ",
                        "
  @import url('https://fonts.googleapis.com/css?family=Public+Sans:400,500,600&display=swap');
  font-family: 'Public Sans', 'Helvetica Neue', Helvetica, Arial,
    'Lucida Grande', sans-serif;
",
                        "
  font-weight: 600;
",
                        "
  display: flex;
  justify-content: center;
  align-items: center;
",
                      ],
                    },
                    "displayName": "Styled(styled.span)",
                    "foldedComponentIds": Array [
                      "sc-bwzfXH",
                    ],
                    "render": [Function],
                    "styledComponentId": "sc-EHOje",
                    "target": "span",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <span
                  className="c1"
                >
                  Default
                </span>
              </StyledComponent>
            </Styled(styled.span)>
          </button>
        </StyledComponent>
      </styled.button>
    </BaseButton>
  </Component>
</ButtonSecondary>
`;
